flambda-backend/tests/backend/zero_alloc_checker/fail13.ml
[@@@zero_alloc all]

let fail_loud2 x = [ x; x+1 ]
